Signed-off-by: HamzaShah <hamzashah571@gmail.com>

--- a/task.html
+++ b/task.html
@@ -12,7 +12,7 @@
 		</div>
 
 	<div class="wrapper">
-		<p>Bawa jee tension nahi leni bhai ki. INSHALLAH ALLAH karam kare ga ab logics sahi karne apne</p>
+		<p>Bawa jee tension nahi leni bhai ki. <span class="special"> INSHALLAH </span> ALLAH karam kare ga ab logics sahi karne apne</p>
 
 		<a href="">Link</a>
 		
