Signed-off-by: HamzaShah <hamzashah571@gmail.com>

--- a/task.html
+++ b/task.html
@@ -8,8 +8,21 @@
 	<div class="container">
 
 		<div class="header">
+			<div class="title">
+			<a href="">	<h1>TASK</h1> </a>
+
+			</div>
+			<div class="menu">
+				<ul>
+				<a href="">	<li>Home</li></a>
+				<a href="">	<li>About Us</li></a>
+				<a href="">	<li>Sign up</li></a>
+
+				</ul>
+			</div>
 			
 		</div>
+		<div class="content">
 
 	<div class="wrapper">
 		<p>Bawa jee tension nahi leni bhai ki. <span class="special"> INSHALLAH </span> ALLAH karam kare ga ab logics sahi karne apne</p>
@@ -19,6 +32,12 @@
 
 
 	</div>
+</div>
+
+<div class="footer">
+	
+
+</div>
 </div>
 
 </body>
